definida la estructura de archivos

--- a/layouts/planEstudio/list.html
+++ b/layouts/planEstudio/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="contact">
+<main >
     {{ $items := (where $.Site.RegularPages "Type" "planEstudio") }}
     {{ $len := (len $items) }}
     
