--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -589,10 +589,11 @@
 }
 .cursos__grid{
 	display: grid;
+	overflow-y: scroll;
 	/* justify-items: center; */
 	grid-template-columns: 1fr 20% 1fr 20% 1fr;
-	grid-template-rows: 20% 20% 20% 20% 20%;
-	grid-gap: 20px 20px;
+	grid-template-rows: auto;
+	grid-gap: 10px 10px;
 	border-style: solid;
 }
 .curso__container{
@@ -600,3 +601,15 @@
 	padding: 20px; 
 	border: 1px solid black
 }
+.cursos__container{
+	/* justify-items: end; */
+	display: grid;
+	/* justify-items: center; */
+	grid-template-columns: 15% 85%;
+	grid-template-rows: 40vw ;
+	grid-gap: 2px 2px;
+	border-radius: 10px;
+	padding: 20px; 
+	border: 1px solid black
+}
+
