--- a/layouts/partials/curso.html
+++ b/layouts/partials/curso.html
@@ -1,7 +1,7 @@
 <div class="curso__container">
-    <h1 class="card__header__title">
-        <a href="#" class="card__header_link">{{ .Params.asignatura}}</a>
-    </h1>
+    <h3 class="card__header__title">
+        <a href="{{ .Permalink }}"  class="card__header_link" alt="{{ .Params.asignatura}}.">{{ .Params.asignatura}}</a>
+    </h3>
     <h3 class="curso__title card__header__date date">Responsable: {{ .Params.responsable}}</h1>
     <h3 class="curso__title card__header__date date">Créditos: {{ .Params.créditos}}</h1>
     <h3 class="curso__title card__header__date date">Horas: {{ .Params.horas}}</h1>
