reglamento hecho en markdown

--- a/layouts/cursos/single.html
+++ b/layouts/cursos/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <article class="post">
     <header class="post__header">
-        <h1 class="post__title">{{ .Params.responsable}}</h1>
+        <h1 class="post__title">{{ .Params.asignatura}}</h1>
     </header>
 
     {{ if ne .Type "page" }}
