--- a/layouts/planEstudio/list.html
+++ b/layouts/planEstudio/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main >
+<main class="plan-estudio">
     {{ $items := (where $.Site.RegularPages "Type" "planEstudio") }}
     {{ $len := (len $items) }}
     
