--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,7 +620,7 @@
 	justify-content: flex-start;
 	min-height: 90vh;
 }
-.plan-estudios{
+.plan-estudio{
 	align-items: center;
 	display: flex;
 	flex-direction: column;
