css markdown agregado

--- a/layouts/cursos/single.html
+++ b/layouts/cursos/single.html
@@ -5,7 +5,7 @@
     </header>
 
     {{ if ne .Type "page" }}
-    <main class="post__body">
+    <main class="post__body markdown-body">
         {{ .Content }}
     </main>
     {{ else }}
