--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,6 +5,7 @@
 	<meta name="googlebot" content="index, follow, noarchive" />
 	<title>{{ $.Site.Title }} - {{ .Title }}</title>
 	<link rel="icon" href="{{ $.Site.BaseURL }}{{ $.Site.Params.favicon }}" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.min.css">
 	<meta name="description" content="{{ $.Site.Params.description }}" />
 	{{ .Hugo.Generator }}
 
