--- a/layouts/_default/card.html
+++ b/layouts/_default/card.html
@@ -8,10 +8,10 @@
         {{ if ne .Type "page" }}
         {{ if and $.Site.Params.posts.showDate $.Site.Params.posts.showAuthor }}
         <p class="card__header__date date">
-            {{ dateFormat $.Site.Params.posts.dateFormat .Date }} By {{ $.Params.author }}.
+            {{$.Params.fecha }} Publicado por {{ $.Params.author }}.
         </p>
         {{ else if $.Site.Params.posts.showDate }}
-        <p class="card__header__date date">{{ dateFormat $.Site.Params.posts.dateFormat .Date }}</p>
+        <p class="card__header__date date">{{.Date }}</p>
         {{ else if $.Site.Params.posts.showAuthor }}
         <p class="card__header__author author">By {{ $.Params.author }}.</p>
         {{ end }}
